--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 #  DB Connection Properties
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/
 spring.datasource.driver-class-name= org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/aas
 spring.datasource.username=postgres
 spring.datasource.password=admin
-
 # JPA Properites
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
