--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 #  DB Connection Properties
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/
 spring.datasource.driver-class-name= org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/aas
 spring.datasource.username=postgres
