--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost:3306/
 spring.datasource.driver-class-name= org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/aas
+spring.datasource.url=jdbc:postgresql://localhost:5432/6
 spring.datasource.username=postgres
 spring.datasource.password=admin
 # JPA Properites
